package edu.fiuba.algo3.modelo;

public class ModificadorIndividualBase implements ModificadorIndividual {
    @Override
    public int modificar(int a) {
        return a;
    }
}