package edu.fiuba.algo3.modelo.Puntuacion.Modificadores;

public interface ModificadorIndividual {
    public int modificar(int a);
}
