package edu.fiuba.algo3.modelo.Puntuacion.Modificadores;

public class ModificadorNulo implements ModificadorIndividual {
    @Override
    public int modificar(int a) {
        return 0;
    }
}
